--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,815 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.container{
+  width: 100%;
+  max-width: 1050px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+}
+
+.bg-light{
+  background-color: #E5E5E5;
+}
+
+.app{
+  min-height: 100vh;
+  position: relative;
+}
+
+.navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar div{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.navbar div h1{
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  letter-spacing: 0.2925px;
+  color: #000000;
+}
+
+.navbar div p{
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.2925px;
+  color: #555555;
+}
+
+.navbar button{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.navbar button span{
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 30px;
+  letter-spacing: 0.26px;
+}
+
+.hr{
+  width: 100%;
+  height: 1.02px;
+  background-color:rgb(219, 217, 217);
+  margin-top: 22px;
+  margin-bottom: 35px;
+}
+
+@media (max-width: 768px){
+  .navbar div p{
+    display: none;  
+  }
+}
+
+.box{
+  min-height: 735px;
+  width: 100%;
+  border-radius: 10px;
+  background-color: #fff;
+  padding: 30px;
+}
+
+.full-point{
+  width: 8px;
+  height: 8px;
+  background-color: #000;
+  border-radius: 50%;
+  border: 1px solid #000;
+}
+
+.empty-point{
+  width: 8px;
+  height: 8px;
+  background-color: #FFF;
+  border-radius: 50%;
+  border: 1px solid #000;
+}
+
+.header-box{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.steps{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.box-title{
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.26px;
+}
+
+.steps h6{
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 25px;
+  text-align: right;
+  letter-spacing: 0.26px;
+}
+
+.main-box{
+  margin-top: 30px;
+  min-height: 615px;
+  background: #F9F9F9;
+  border-radius: 4px;
+  /* padding-top: 80px;
+  padding-bottom: 60px; */
+  padding: 80px 10px 60px 10px;
+}
+
+.logo{
+  width: 150px;
+  height: 150px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.bg-logo{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.word-logo{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% , -50%);
+}
+
+.main-box-title{
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 35px;
+  text-align: center;
+  letter-spacing: 0.26px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.main-box-paraph{
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.26px;
+  max-width: 520px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+
+.transaction{
+  max-width: 400px;
+  background: #FFFFFF;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  padding: 15px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.transaction h2{
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.26px;
+}
+
+.transaction h4{
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 30px;
+  text-align: right;
+  letter-spacing: 0.26px;
+  color: #555555;
+}
+
+.primary-button{
+  background: #286EF1;
+  border-radius: 4px;
+  padding: 13px 25px;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border: 1px solid transparent;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 0.26px;
+}
+
+.disable-button{
+  background: #F5F5F5;
+border: 1px solid #E6E6E6;
+border-radius: 4px;
+padding: 13px 25px;
+margin-left: auto;
+margin-right: auto;
+display: block;
+pointer-events: none;
+}
+
+.find-more{
+  margin-top: 20px;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 0.26px;
+  color: #286EF1;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.modal{
+  margin-top: 31px;
+  margin-bottom: 30px;
+  width: 100%;
+  background: #D5E3FD;
+  border-radius: 10px;
+  padding: 20px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-texts-logo{
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.modal-texts-logo div h2{
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.modal-texts-logo div p{
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.26px;
+  color: #1A1A1A;
+}
+
+.modal button{
+  margin: 0;
+}
+
+@media (max-width: 580px){
+  .modal , .modal-texts-logo{
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+  }
+}
+
+.bounce-in-bottom {
+	-webkit-animation: bounce-in-bottom 1.1s both;
+	        animation: bounce-in-bottom 1.1s both;
+}
+
+
+@-webkit-keyframes bounce-in-bottom {
+  0% {
+    -webkit-transform: translateY(500px);
+            transform: translateY(500px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(65px);
+            transform: translateY(65px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(28px);
+            transform: translateY(28px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(8px);
+            transform: translateY(8px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+@keyframes bounce-in-bottom {
+  0% {
+    -webkit-transform: translateY(500px);
+            transform: translateY(500px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateY(65px);
+            transform: translateY(65px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateY(28px);
+            transform: translateY(28px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateY(8px);
+            transform: translateY(8px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+
+
+.back-section a{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.back-section h5 {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  letter-spacing: 0.26px;
+  color: #555555;
+  
+}
+
+.main-box-2{
+  padding: 30px 30px 80px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.alert{
+  width: 600px;
+  max-width: 600px;
+  min-height: 74px;
+  background: #FCF4E6;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px 20px;
+  display: flex;
+  align-items: flex-start;
+  gap: 5px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.alert p{
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 22px;
+  letter-spacing: 0.26px;
+}
+
+.select-currency{
+  border: 1px solid #E6E6E6;
+  border-radius: 4px;
+  min-width: 359px;
+  min-height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 15px;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.26px;
+  outline: none;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 768px){
+  .alert{
+    width: 100%;
+    font-size: 11px;
+  }
+}
+
+
+.rules{
+  display: flex;
+  gap: 10px;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.26px;
+  color: #555555;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 567px){
+  .select-currency{
+    min-width: 100%;
+    font-size: 13px;
+    padding: 10px 0;
+  }
+  .rules{
+    font-size: 13px;
+    text-align: center;
+    line-height: normal;
+  }
+}
+
+
+.popup{
+  width: 270px;
+  height: 80px;
+  margin-left: 10px;
+  margin-right: 10px;
+  background: #dad7d7;
+  border-radius: 4px;
+  position: absolute;
+  left: 0;
+  top: 80vh;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  gap: 13px;
+}
+
+.tilt-in-left-1 {
+	-webkit-animation: tilt-in-left-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: tilt-in-left-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes tilt-in-left-1 {
+  0% {
+    -webkit-transform: rotateX(-30deg) translateX(-300px) skewX(-30deg);
+            transform: rotateX(-30deg) translateX(-300px) skewX(-30deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0deg) translateX(0) skewX(0deg);
+            transform: rotateX(0deg) translateX(0) skewX(0deg);
+    opacity: 1;
+  }
+}
+@keyframes tilt-in-left-1 {
+  0% {
+    -webkit-transform: rotateX(-30deg) translateX(-300px) skewX(-30deg);
+            transform: rotateX(-30deg) translateX(-300px) skewX(-30deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0deg) translateX(0) skewX(0deg);
+            transform: rotateX(0deg) translateX(0) skewX(0deg);
+    opacity: 1;
+  }
+}
+
+.popup div{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.popup div p{
+  font-weight: 400;
+font-size: 13px;
+line-height: 20px;
+/* or 154% */
+
+display: flex;
+align-items: center;
+letter-spacing: 0.26px;
+}
+
+.popup div p:last-child{
+  color: #555555;
+  font-size: 10px;
+}
+
+.loading-box{
+  max-height: 535px !important;
+  margin-top: 35px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.spin{
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.spin::before {
+  animation: 1.5s linear infinite spinner;
+  animation-play-state: inherit;
+  border: solid 5.86667px #AAAAAA;
+  border-bottom-color: #FFF;
+  border-radius: 50%;
+  content: "";
+  height: 44px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate3d(-50%, -50%, 0);
+  width: 44px;
+  will-change: transform;
+}
+
+@keyframes spinner {
+  0% {
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+.loading-title{
+  margin-top: 10px;
+  margin-bottom: 30px;
+
+  font-weight: 700;
+font-size: 24px;
+line-height: 35px;
+/* identical to box height, or 146% */
+
+text-align: center;
+letter-spacing: 0.26px;
+}
+
+.loading-paraph{
+  font-weight: 400;
+font-size: 15px;
+line-height: 30px;
+/* or 200% */
+
+text-align: center;
+letter-spacing: 0.26px;
+
+color: #555555;
+}
+
+.main-nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+
+.main-nav ul.desktop-menu{
+  display: flex;
+  list-style: none;
+  padding: 0;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 30px;
+  gap: 32px;
+  letter-spacing: 0.26px;
+  color: #555555;
+}
+
+.main-nav ul li{
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 3px;
+}
+
+.main-nav button{
+  display: flex;
+  align-items: center;
+  background-color: rgb(220, 212, 212);
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 13px;
+  gap: 3px;
+  letter-spacing: 0.26px;
+  padding: 10px;
+}
+
+.show-menu{
+  display: none !important;
+}
+
+@media (max-width: 576px){
+  .main-nav ul.desktop-menu{
+    display: none;
+  }
+
+  .show-menu{
+    display: block !important;
+  }
+  
+}
+
+.mobile-menu{
+  background-color: rgb(219, 217, 217);
+  list-style: none;
+  display: flex;
+  border-radius: 4px;
+  padding: 20px;
+  flex-direction: column;
+  gap: 25px;
+  position: absolute;
+  top: 140%;
+  right: 10px;
+  max-width: 280px;
+}
+
+.tilt-in-right-2 {
+	-webkit-animation: tilt-in-right-2 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: tilt-in-right-2 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes tilt-in-right-2 {
+  0% {
+    -webkit-transform: rotateX(30deg) translateX(300px) skewX(-30deg);
+            transform: rotateX(30deg) translateX(300px) skewX(-30deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0deg) translateX(0) skewX(0deg);
+            transform: rotateX(0deg) translateX(0) skewX(0deg);
+    opacity: 1;
+  }
+}
+@keyframes tilt-in-right-2 {
+  0% {
+    -webkit-transform: rotateX(30deg) translateX(300px) skewX(-30deg);
+            transform: rotateX(30deg) translateX(300px) skewX(-30deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0deg) translateX(0) skewX(0deg);
+            transform: rotateX(0deg) translateX(0) skewX(0deg);
+    opacity: 1;
+  }
+}
+
+.connected{
+  width: 500px;
+  height: 80px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 0 auto;
+  padding: 15px 30px;
+}
+
+.continue-box button{
+  padding: 13px 50px;
+}
+
+.connected{
+  display: flex;
+}
+
+.connected div:first-child{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.connected div:first-child label{
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.26px;
+}
+
+.connected div:first-child input{
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  letter-spacing: 0.26px;
+  border: none;
+  outline: none;
+  color: #555555;
+}
+
+.connected div:last-child{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 30px;
+  text-align: right;
+  letter-spacing: 0.26px;
+  color: #555555;
+}
+
+@media (max-width: 655px){
+  .connected{
+    flex-direction: column;
+    width: max-content;
+    align-items: center;
+    height: max-content;
+    max-width: 280px;
+    gap: 10px;
+  }
+
+  .connected div:first-child{
+    gap: 5px;
+  }
+
+  .connected input{
+    text-align: center;
+  }
 }
